--- a/index.html
+++ b/index.html
@@ -142,30 +142,33 @@
         - #SERVICE
       -->
 
-      <section class="service" id="service">
+      <section class="section service" id="service" aria-label="service">
         <div class="container">
 
-          <h2 class="h2 section-title">Get More Customers Online</h2>
+          <h2 class="h2 section-title">Services We Provided</h2>
 
           <p class="section-text">
-            Aliquam a augue suscipit, luctus neque purus ipsum neque dolor primis a libero tempus, blandit and cursus
-            varius and
-            magnis sapien
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna.
           </p>
 
-          <ul class="service-list">
+          <ul class="grid-list">
 
             <li>
               <div class="service-card">
 
-                <div class="card-icon">
-                  <ion-icon name="location-outline"></ion-icon>
+                <div class="card-icon" style="background-color: #13c4a1">
+                  <ion-icon name="chatbox"></ion-icon>
                 </div>
 
-                <h3 class="h4 card-title">Local SEO</h3>
+                <h3 class="h3">
+                  <a href="#" class="card-title">SEO Optimization</a>
+                </h3>
 
                 <p class="card-text">
-                  Porta semper lacus cursus feugiat and primis ultrice
+                  Sed ut perspiciatis unde omnis iste natus error sit tatem accusantium doloremque laudantium, totam rem
+                  aperiam, eaque
+                  ipsa quae.
                 </p>
 
               </div>
@@ -174,14 +177,18 @@
             <li>
               <div class="service-card">
 
-                <div class="card-icon">
-                  <ion-icon name="bar-chart-outline"></ion-icon>
+                <div class="card-icon" style="background-color: #6610f2">
+                  <ion-icon name="desktop"></ion-icon>
                 </div>
 
-                <h3 class="h4 card-title">E-Commerce SEO</h3>
+                <h3 class="h3">
+                  <a href="#" class="card-title">Digital Marketing</a>
+                </h3>
 
                 <p class="card-text">
-                  Porta semper lacus cursus feugiat and primis ultrice
+                  Sed ut perspiciatis unde omnis iste natus error sit tatem accusantium doloremque laudantium, totam rem
+                  aperiam, eaque
+                  ipsa quae.
                 </p>
 
               </div>
@@ -190,14 +197,18 @@
             <li>
               <div class="service-card">
 
-                <div class="card-icon">
-                  <ion-icon name="pie-chart-outline"></ion-icon>
+                <div class="card-icon" style="background-color: #ffb700">
+                  <ion-icon name="bulb"></ion-icon>
                 </div>
 
-                <h3 class="h4 card-title">Advanced Analytics</h3>
+                <h3 class="h3">
+                  <a href="#" class="card-title">Market Research</a>
+                </h3>
 
                 <p class="card-text">
-                  Porta semper lacus cursus feugiat and primis ultrice
+                  Sed ut perspiciatis unde omnis iste natus error sit tatem accusantium doloremque laudantium, totam rem
+                  aperiam, eaque
+                  ipsa quae.
                 </p>
 
               </div>
@@ -206,24 +217,25 @@
             <li>
               <div class="service-card">
 
-                <div class="card-icon">
-                  <ion-icon name="magnet-outline"></ion-icon>
+                <div class="card-icon" style="background-color: #fc3549">
+                  <ion-icon name="phone-portrait"></ion-icon>
                 </div>
 
-                <h3 class="h4 card-title">PPC Management</h3>
+                <h3 class="h3">
+                  <a href="#" class="card-title">Keyword Targeting</a>
+                </h3>
 
                 <p class="card-text">
-                  Porta semper lacus cursus feugiat and primis ultrice
+                  Sed ut perspiciatis unde omnis iste natus error sit tatem accusantium doloremque laudantium, totam rem
+                  aperiam, eaque
+                  ipsa quae.
                 </p>
 
               </div>
             </li>
 
-          </ul>
-
-        </div>
-      </section>
-
+            <li>
+              <div class="service-card">
 
 
 
